button is added

--- a/blogproject/author/templates/add_author.html
+++ b/blogproject/author/templates/add_author.html
@@ -7,6 +7,7 @@
 <form class="w-36 mx-auto my-auto " action="">
     {% csrf_token %}
     {{form.as_p}}
+    <button class="bg-blue-900 text-white p-3 round rounded-lg mt-3">Add Author</button>
 </form>
 
 
