--- a/blogproject/templates/base.html
+++ b/blogproject/templates/base.html
@@ -42,7 +42,7 @@
                   
                   <a href="{% url 'posts' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Posts</a>
                   <a href="{% url 'addAuthor' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Add Autor</a>
-                  <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
+                  <a href="{% url 'addProfile' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Add Profile</a>
                 </div>
               </div>
             </div>
