--- a/blogproject/profiles/templates/add_profile.html
+++ b/blogproject/profiles/templates/add_profile.html
@@ -4,11 +4,11 @@
 
 
 <h1 class="text-3xl font-bold mx-auto my-auto flex items-center justify-center"> Add Profile</h1>
-<!-- <form class="w-[50%] mx-auto my-auto p-5 " method="post">
+<form class="w-[50%] mx-auto my-auto p-5 " method="post">
     {% csrf_token %}
     {{form.as_p}}
     <button class="bg-blue-900 text-white p-3 round rounded-lg mt-3">Add Profile</button>
-</form> -->
+</form>
 
 
 {% endblock %}
